--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
     "dompurify": "^3.3.0",
+    "dotenv": "^17.2.3",
     "nanoid": "^5.0.4",
     "zod": "^3.22.4"
   },
